changing indentation size
formating the whole project